--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,16 +5,18 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
+    "preview": "react-scripts build",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
-    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0"
+    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "start": "serve -s build -l $PORT"
   },
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "axios": "^1.7.0"
+    "serve": "^14.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
